# qc_system_pmp

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README.md
server/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml  ruff.toml
server/alembic/: env.py
server/alembic/versions/: 0001_initial_schema.py  0002_operator_pin_optional.py  0003_product_scoped_defect_model.py  0004_inspection_logs_with_outcome.py  0005_part_inspection_category.py  0006_operator_user_link.py  0007_device_name.py  0008_product_attributes.py  0009_operator_details.py  0010_product_cheatsheet_file.py
server/app/: config.py  constants.py  db.py  deps.py  events.py  feature_flags.py  logging.py  main.py  security.py
server/app/models/: __init__.py  defect.py  device.py  feature_flag.py  operator.py  product.py  user.py
server/app/mqtt/: bridge.py  handlers.py  publisher.py  schemas.py
server/app/routers/: auth.py  constants.py  defect_categories.py  defect_logs.py  defect_types.py  devices.py  events.py  feature_flags.py  health.py  inspection_logs.py  inspections.py  kpi.py  operators.py  products.py  reports.py  stats.py
server/app/schemas/: auth.py  category_constant.py  defect.py  device.py  feature_flag.py  inspection.py  kpi.py  kpi_board.py  live.py  live_product.py  log.py  operator.py  product.py  report.py  stats.py
server/app/services/: auth.py  defect_categories.py  defect_logs.py  defect_types.py  devices.py  feature_flags.py  inspection_logs.py  inspections.py  kpi.py  kpi_board.py  live_products.py  (+6 more)
server/tests/: conftest.py
(+266 files in other folders)
